[package]
name = "roomba-s9plus-cli"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.15"
openssl = "0.10"
