[package]
name = "roomba-s9plus-cli"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
description = "CLI to control the Roomba S9+"
homepage = "https://github.com/cecton/roomba-s9plus-cli"
repository = "https://github.com/cecton/roomba-s9plus-cli"
documentation = "https://docs.rs/roomba-s9plus-cli"
readme = "README.md"
keywords = ["roomba"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", rev = "47eb3eaee53a9e5f3687f9120b20d15a22a7bb9f" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.15"
openssl = "0.10"
